crates/registry/tests/compile_fail/pattern_prop.rs
use registry::post_component;

#[allow(non_snake_case)]
#[post_component]
pub fn Bad((a, b): (String, String)) {
    drop((a, b));
}

fn main() {}
